Enable node roles to be pluggable (#43175)
This commit introduces the possibility for a plugin to introduce
additional node roles.